Passenger Entity added, Refund fixed